fix(data-1225): after each ISHTAR synchro, we added the same value adapters again and again to subscription which would increase memory consumption and increase SiriValueTransformer.transform processing time